feat: add cart menu

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 :root {
   --foreground-rgb: #000;
   --background-color: #fff;
+  --navbar-height: 80px;
 }
 
 /* @media (prefers-color-scheme: dark) {
